Konfiguracija za deployment na heroku. Promijenjen tip id-a iz long u UUID.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,11 @@ spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/springRolice
 spring.datasource.username=postgres
 spring.datasource.password=bazepodataka
-spring.datasource.initialization-mode=always
-spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
-spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
-spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+spring.jpa.generate-ddl=true
+#otkomentiraj donju liniju kad zavrsimo aplikaciju
+#spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.initialization-mode=always
+#spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
