--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,12 @@ spring.jpa.generate-ddl=true
 #otkomentiraj donju liniju kad zavrsimo aplikaciju
 #spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.maxActive=10
+#spring.datasource.maxIdle=5
+#spring.datasource.minIdle=2
+#spring.datasource.initialSize=5
+#spring.datasource.removeAbandoned=true
 #spring.datasource.initialization-mode=always
 #spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
