--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+/dokumentacija/*.aux
+/dokumentacija/*.lof
+/dokumentacija/*.log
+/dokumentacija/*.lot
+/dokumentacija/*.out
+/dokumentacija/*.pdf
+/dokumentacija/*.synctex.gz
+/dokumentacija/*.toc
+*.DS_Store
+
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
