--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/springRolice
 spring.datasource.username=postgres
-spring.datasource.password=bazepodataka
+spring.datasource.password=1234
 spring.jpa.generate-ddl=true
 #otkomentiraj donju liniju kad zavrsimo aplikaciju
 #spring.jpa.hibernate.ddl-auto=none
