Nadopunjen StudentController sa metodom za stvaranje studenata Zapocet LoginController Nadopunjen Student.java za potrebe authorities() iz StudentUserDetailsService.java Dodano pretrazivanje po korisnickom imenu u StudentRepository.java Zapocet exception handling za Security komponente Zapocet StudentUserDetailsService.java WebSecurity.java Deklarirane i implementirane metode za rad sa Student.java u StudentService komponenti Ukljucen password encoder u aplikaciju Dodan hard-coded admin auth u application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,10 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+
+
+progi.projekt.admin.password=$2a$10$7dR1nXFoZCc1I9UMEWxWDO4AIC7CRh66h5O90YlcNk7wo0GqaHoI6
+#"pass"
+
+#progi.projekt.admin.password=$2a$10$BJXbV0une7kyG7HxRZQgXO5q2cbemZV2dqxENX35.qaZMz0gyNl7a
+#https://www.browserling.com/tools/bcrypt, 10 rounds, "spring"
