--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,18 @@
         <java.version>11</java.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>jwtk-repo</id>
+            <url>https://github.com/jwtk/jjwt/</url>
+        </repository>
+
+        <repository>
+            <id>java-jwt-repo</id>
+            <url>https://mvnrepository.com/artifact/com.auth0/java-jwt</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <!-- https://mvnrepository.com/artifact/net.logstash.logback/logstash-logback-encoder -->
         <!--    -->
@@ -49,6 +61,32 @@
 
 
 
+
+
+        <!-- mozda ce nesto ovog tipa tipa trebati za session management, trenutno se ne koristi za nista-->
+
+        <!--
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
+            <version>0.11.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-impl</artifactId>
+            <version>0.11.2</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId> &lt;!&ndash; or jjwt-gson if Gson is preferred &ndash;&gt;
+            <version>0.11.2</version>
+            <scope>runtime</scope>
+        </dependency>
+        -->
+
+
+
         <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-jwt -->
         <dependency>
             <groupId>org.springframework.security</groupId>
@@ -56,25 +94,20 @@
             <version>1.1.1.RELEASE</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+
+        <!--
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
             <version>0.9.1</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
         <dependency>
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
             <version>3.11.0</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.bitbucket.b_c</groupId>
-            <artifactId>jose4j</artifactId>
-            <version>0.7.2</version>
-        </dependency>
+        -->
 
 
 
@@ -83,6 +116,11 @@
             <artifactId>jaxb-api</artifactId>
             <version>2.3.0</version>
         </dependency>
+
+
+
+
+
 
         <dependency>
             <groupId>org.postgresql</groupId>
