--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,12 @@
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/net.logstash.logback/logstash-logback-encoder -->
-        <!--    -->
+        <!--
         <dependency>
             <groupId>net.logstash.logback</groupId>
             <artifactId>logstash-logback-encoder</artifactId>
             <version>6.4</version>
-        </dependency>
+        </dependency> -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
