--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/springRolice
 spring.datasource.username=postgres
