--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,20 @@
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/springRolice
 spring.datasource.username=postgres
-spring.datasource.password=bazepodataka
+spring.datasource.password=5240
 spring.jpa.generate-ddl=true
+
 #otkomentiraj donju liniju kad zavrsimo aplikaciju
 #spring.jpa.hibernate.ddl-auto=none
+
 spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.initialization-mode=always
 #spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+
+#pozvati jedanput ako mjenjamo ER model:
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
 
 progi.projekt.admin.pass=$2a$10$7dR1nXFoZCc1I9UMEWxWDO4AIC7CRh66h5O90YlcNk7wo0GqaHoI6
+#'pass'
