--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 progi.projekt.admin.pass=$2a$10$7dR1nXFoZCc1I9UMEWxWDO4AIC7CRh66h5O90YlcNk7wo0GqaHoI6
 #'pass'
+
+progi.projekt.jwt.secret=secret
