--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=bazepodataka
 spring.jpa.generate-ddl=true
 #otkomentiraj donju liniju kad zavrsimo aplikaciju
 #spring.jpa.hibernate.ddl-auto=none
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 #spring.datasource.initialization-mode=always
 #spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
