--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-spring.datasource.platform=postgres
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:5432/springRolice
 spring.datasource.username=postgres
-spring.datasource.password=5240
+spring.datasource.password=bazepodataka
 spring.jpa.generate-ddl=true
 
 #otkomentiraj donju liniju kad zavrsimo aplikaciju
 #spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 
-spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.initialization-mode=always
 #spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
 
