Dodano hashiranje šifri na Register.jsx i Login.jsx. Funkcija za hashiranje u index.js.

--- a/front/package.json
+++ b/front/package.json
@@ -9,9 +9,10 @@
     "@testing-library/user-event": "^12.1.10",
     "avs-sdk": "^1.2.5",
     "aws-sdk": "^2.788.0",
-    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
+    "js-sha256": "^0.9.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
