--- a/front/package.json
+++ b/front/package.json
@@ -2,6 +2,7 @@
   "name": "front",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@auth0/auth0-react": "^1.1.0",
     "@testing-library/jest-dom": "^5.11.5",
@@ -9,6 +10,7 @@
     "@testing-library/user-event": "^12.1.10",
     "avs-sdk": "^1.2.5",
     "aws-sdk": "^2.788.0",
+    "base-64": "^1.0.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
@@ -19,6 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "rxjs": "latest",
+    "utf8": "^3.0.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
