Hashing prilikom reg, login nakon reg, ispravljen hashing prilikom seeda, popravljen AuthHandler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,9 @@ spring.jpa.generate-ddl=true
 #otkomentiraj donju liniju kad zavrsimo aplikaciju
 #spring.jpa.hibernate.ddl-auto=none
 
+#spring.jpa.hibernate.ddl-auto=create jedanput ako se nesto mjenjalo na bazi
 spring.jpa.hibernate.ddl-auto=update
+
 #spring.datasource.initialization-mode=always
 #spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
 
