Mergan branch login_debug, promijenjena ikona aplikacije.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,12 @@
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/springrolice
+spring.datasource.url=jdbc:postgresql://localhost:5432/springRolice
 spring.datasource.username=postgres
 spring.datasource.password=bazepodataka
 spring.jpa.generate-ddl=true
 #otkomentiraj donju liniju kad zavrsimo aplikaciju
 #spring.jpa.hibernate.ddl-auto=none
-
-#spring.jpa.hibernate.ddl-auto=create jedanput ako se nesto mjenjalo na bazi
-spring.jpa.hibernate.ddl-auto=update
-
+spring.jpa.hibernate.ddl-auto=create
 #spring.datasource.initialization-mode=always
 #spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
 
