popravljen cors error za oglas/list

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/springrolice
+spring.datasource.url=jdbc:postgresql://localhost:5432/springRolice
 spring.datasource.username=postgres
 spring.datasource.password=bazepodataka
 spring.jpa.generate-ddl=true
