--- a/front/package.json
+++ b/front/package.json
@@ -16,10 +16,13 @@
     "js-sha256": "^0.9.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "rxjs": "latest",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^10.12.6",
     "utf8": "^3.0.0",
     "web-vitals": "^0.2.4"
   },
