Dodan backend za obavijesti i par bugfixova u bazi, neke stvari jos uvijek ne rade

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=${PORT:8080}
 #pokretanje lokalno
 spring.datasource.url=jdbc:postgresql://localhost:5432/springRolice
 spring.datasource.username=postgres
-spring.datasource.password=bazepodataka
+spring.datasource.password=1234
 
 
 spring.jpa.generate-ddl=true
