--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "js-sha256": "^0.9.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
