--- a/front/package.json
+++ b/front/package.json
@@ -12,12 +12,14 @@
     "base-64": "^1.0.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.3",
+    "emoji-mart": "^3.0.0",
     "jquery": "^3.5.1",
     "js-sha256": "^0.9.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.1",
+    "react-reactions": "^0.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "rxjs": "latest",
