--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,6 @@ spring.jpa.hibernate.ddl-auto=create
 
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
 
-#progi.projekt.admin.pass=$2a$10$7dR1nXFoZCc1I9UMEWxWDO4AIC7CRh66h5O90YlcNk7wo0GqaHoI6
+progi.projekt.admin.pass=$2a$10$7dR1nXFoZCc1I9UMEWxWDO4AIC7CRh66h5O90YlcNk7wo0GqaHoI6
 #'pass'
-#progi.projekt.jwt.secret=secret
+progi.projekt.jwt.secret=secret
