mergani lajkovi s developom - PAZI oglas.geLajkovi()

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ build/
 ### VS Code ###
 .vscode/
 /front/debug.log
+
+### application.properties ###
+/src/main/java/resources/application.properties
