--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@
 #pokretanje lokalno
 spring.datasource.url=jdbc:postgresql://localhost:5432/springRolice
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=bazepodataka
 
 
 spring.jpa.generate-ddl=true
