Dodan SMTP za gmail, postavljeno slanje mailova u obavijest controlleru

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@
 #pokretanje lokalno
 spring.datasource.url=jdbc:postgresql://localhost:5432/springRolice
 spring.datasource.username=postgres
-spring.datasource.password=bazepodataka
+spring.datasource.password=1234
 
 
 spring.jpa.generate-ddl=true
@@ -29,3 +29,16 @@ spring.jpa.hibernate.ddl-auto=create
 progi.projekt.admin.pass=$2a$10$7dR1nXFoZCc1I9UMEWxWDO4AIC7CRh66h5O90YlcNk7wo0GqaHoI6
 #'pass'
 progi.projekt.jwt.secret=secret
+
+#E-mail settings
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+#SETAJ OVO NA GMAIL ACCOUNT
+spring.mail.username=username
+spring.mail.password=password
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.smtp.connectiontimeout=5000
+spring.mail.properties.smtp.timeout=5000
+spring.mail.properties.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.starttls.enable=true
