Dodane postavke za springrolice gmail account, dodan zakomentiran kod u DatabaseFill za testiranje slanja mailova (posalje mail na startupu)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,12 +30,11 @@ progi.projekt.admin.pass=$2a$10$7dR1nXFoZCc1I9UMEWxWDO4AIC7CRh66h5O90YlcNk7wo0Gq
 #'pass'
 progi.projekt.jwt.secret=secret
 
-#E-mail settings
+#E-mail settings, zakomentiraj sve tu ako neces mailove
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-#SETAJ OVO NA GMAIL ACCOUNT
-spring.mail.username=username
-spring.mail.password=password
+spring.mail.username=spring.rolice
+spring.mail.password=progiProjekt
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.smtp.connectiontimeout=5000
