--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@
 #pokretanje lokalno
 spring.datasource.url=jdbc:postgresql://localhost:5432/springRolice
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=bazepodataka
 
 
 spring.jpa.generate-ddl=true
@@ -16,7 +16,7 @@ spring.datasource.platform=postgres
 
 
 #spring.jpa.hibernate.ddl-auto=create jedanput ako se nesto mjenjalo na bazi
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 #spring.datasource.initialization-mode=always
 #spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
