--- a/front/package.json
+++ b/front/package.json
@@ -26,13 +26,15 @@
     "react-dom": "^17.0.1",
     "react-ionicons": "^3.1.4",
     "react-reactions": "^0.1.3",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "rxjs": "latest",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^10.12.6",
     "utf8": "^3.0.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "sockjs-client": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -57,5 +59,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@stomp/stompjs": "^6.0.0"
   }
 }
