--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,7 @@ spring.datasource.platform=postgres
 
 
 #spring.jpa.hibernate.ddl-auto=create jedanput ako se nesto mjenjalo na bazi
-spring.jpa.hibernate.ddl-auto=create
-
+spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.initialization-mode=always
 #spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
 
